# coreburn

./: CMakeLists.txt  README.md
include/: fp.h  int.h  mem.h  vect.h
src/: fp.c  int.c  main.c  mem.c  vect.c
